--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,6 @@
 ACCESS_TOKEN = 5383198766:AAFD0LS0K_P9SrpYBOHfpS_cXAHnP-iYm1s
 
 [REDIS]
-HOST = redis-11989.c9.us-east-1-2.ec2.cloud.redislabs.com
-PASSWORD = Yp0b4A9z1PG1VnyZ4MyC54cSGIuVWzIv
-REDISPORT = 11989
+HOST = sg-comp7940-cook-50953.servers.mongodirector.com
+PASSWORD = MVXKydA66MTYIAYKRICFC3RyixIJLFni
+REDISPORT = 6379
