--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,6 @@
 ACCESS_TOKEN = 5383198766:AAFD0LS0K_P9SrpYBOHfpS_cXAHnP-iYm1s
 
 [REDIS]
-HOST = sg-comp7940-cook-50953.servers.mongodirector.com:6379
-PASSWORD = MVXKydA66MTYIAYKRICFC3RyixIJLFni
-REDISPORT = 6379
+HOST = comp7940-cooking-life-aa53.aivencloud.com
+PASSWORD = AVNS_ATn40Q96SG3Otoo
+PORT = 15180
