--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,6 @@
 ACCESS_TOKEN = 5383198766:AAFD0LS0K_P9SrpYBOHfpS_cXAHnP-iYm1s
 
 [REDIS]
-HOST = comp7940-cooking-life-aa53.aivencloud.com
-PASSWORD = AVNS_ATn40Q96SG3Otoo
-PORT = 15180
+HOST = redis-11989.c9.us-east-1-2.ec2.cloud.redislabs.com
+PASSWORD = Yp0b4A9z1PG1VnyZ4MyC54cSGIuVWzIv
+PORT = 11989
